--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "recharts": "^2.15.4",
+    "supabase": "^2.51.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
